--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Bozhidar Gorchev
 title: Frontend Developer
 email: bojidargo@gmail.com
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+phone: +359 878 208 373
 # phone_title: Phone (Phone title override)
 website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
@@ -23,7 +23,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 stackoverflow_username: "00000001"
 dribbble_username: jekyll
-facebook_username: jekyll
+facebook_username: https://www.facebook.com/Bojakta/
 flickr_username: jekyll
 instagram_username: jekyll
 linkedin_username: jekyll
