--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Bozhidar Gorchev
 title: Frontend Developer
 email: bojidargo@gmail.com
 # email_title: Email (Email title override)
-phone: +359 878 208 373
+phone:
 +359 878 208 373
 website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
