--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ darkmode: false
 
 # Social links
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  static1010
 stackoverflow_username: "00000001"
 dribbble_username: jekyll
 facebook_username: https://www.facebook.com/Bojakta/
