--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: bojidargo@gmail.com
 # email_title: Email (Email title override)
 phone:
 +359 878 208 373
-website: Your website (eg.https://www.facebook.com/Bojakta/)(optional)
+website: My site (eg.https://www.facebook.com/Bojakta/)(optional)
 # https://www.facebook.com/Bojakta/
 
 # Dark Mode (true/false/never)
