--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ googleplus_username: +jekyll
 # Additional icon links
 additional_links:
 - title: зааааааааааааааааааааааааааааааааааааааааааааааааааааааааааа
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://www.facebook.com/Bojakta/)
   url: Link url (eg. https://google.com)
 # - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-#   url: Link url (eg. https://google.com)
+#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://www.facebook.com/Bojakta/)
+#   url: Link url (eg. https://www.facebook.com/Bojakta/)
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
