--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ name: Bozhidar Gorchev
 title: Frontend Developer
 email: bojidargo@gmail.com
 # email_title: Email (Email title override)
-phone:
-+359 878 208 373
+phone: +359 878 208 373
+
 website: https://www.facebook.com/Bojakta/
 
 
