--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,11 @@ darkmode: false
 # Social links
 twitter_username: jekyllrb
 github_username:  static1010
-stackoverflow_username: "00000001"
-dribbble_username: jekyll
+stackoverflow_username: "static10"
 facebook_username: https://www.facebook.com/Bojakta/
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
+instagram_username: https://www.instagram.com/bojidargorchev/
+linkedin_username: https://www.linkedin.com/in/bozhidar-gorchev-70187b203/
+
 
 
 # Additional icon links
