--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ darkmode: false
 
 github_username:  static1010
 stackoverflow_username: "static10"
-facebook_username: https://www.facebook.com/Bojakta/
-instagram_username: https://www.instagram.com/bojidargorchev/
-linkedin_username: https://www.linkedin.com/in/bozhidar-gorchev-70187b203/
+facebook_username: Bojakta
+instagram_username: bojidargorchev
+linkedin_username: bozhidar-gorchev-70187b203
 
 
 
