--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ darkmode: false
 # Social links
 
 github_username:  static1010
-stackoverflow_username: "static10"
+stackoverflow_username: static10
 facebook_username: Bojakta
 instagram_username: bojidargorchev
 linkedin_username: bozhidar-gorchev-70187b203
