--- a/_config.yml
+++ b/_config.yml
@@ -52,11 +52,11 @@ about_content: | # this will include new lines to allow paragraphs
   Responding to challenges by designing and developing solutions and building web applications aligned to customer's services. Translating
   solutions into code.
 
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="https://www.facebook.com/Bojakta/">Links</a>
-    - Images ![alt text](/images/bg.jpg)
+ I work on my own project with follow technologies
+    - REACT
+    - JavaScript
+    - CSS
+    - HTML5
 
 content:
   - title: Projects # Title for the section
