--- a/_config.yml
+++ b/_config.yml
@@ -84,12 +84,12 @@ content:
     layout: list
     content:
       - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
+        title: Vitosha 13
+        sub_title: Director
+        caption: Date Range (August 2017 - March 2020)
+        link: http://www.vitosha-academy.com/bg
         quote: >
-          Short description of the company (optional)
+          
         description: | # this will include new lines to allow paragraphs
           Description of role
   - title: Education
