--- a/_config.yml
+++ b/_config.yml
@@ -46,20 +46,17 @@ additional_links:
 # About Section
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/bg.jpg
-about_content: | # this will include new lines to allow paragraphs
-  Solution-driven professional excelling in highly collaborative work environment, finding solutions
-  to challenges and focused on customer satisfaction. My interest and knowledge are in a JavaScript and React.
-  Responding to challenges by designing and developing solutions and building web applications aligned to customer's services. Translating
-  solutions into code.
+about_content:  | # this will include new lines to allow paragraphs 
+   |Solution-driven professional excelling in highly collaborative work environment, finding solutions|
+  |to challenges and focused on customer satisfaction. My interest and knowledge are in a JavaScript and React.|
+  |Responding to challenges by designing and developing solutions and building web applications aligned to customer's services. Translating|
+   |solutions into code.
 
- I work on my own project with follow technologies:
-    - REACT
-    - JavaScript
-    - CSS
-    - HTML5
+ I work on my own project with follow technologies: REACT | JavaScript | CSS | HTML5
+  
     
- You can see my GitHub profile:
-    - https://github.com/static1010
+ You can see my GitHub profile:  https://github.com/static1010
+    
 
 content:
   - title: Projects # Title for the section
