--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # Site
+repository:  Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Content configuration version
-
+version: 2
 
 # Personal info
 name: Bozhidar Gorchev
