--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,15 @@ about_content:  | # this will include new lines to allow paragraphs
    Responding to challenges by designing and developing solutions and building web applications aligned to customer's services. Translating
    solutions into code.
 
- I work on my own project with follow technologies: REACT | JavaScript | CSS | HTML5
+     I work on my own project with follow technologies:  
+        - RACT 
+        - JavaScript
+        - CSS
+        - HTML5
+        
   
     
- You can see my GitHub profile:  https://github.com/static1010
+    You can see my GitHub profile:  https://github.com/static1010
     
 
 content:
