--- a/_config.yml
+++ b/_config.yml
@@ -90,8 +90,8 @@ content:
         sub_title: Director
         caption: Date Range (August 2017 - March 2020)
         link: http://www.vitosha-academy.com/bg
-        quote: >
-        Head of sport Academy
+        quote: > Head of sport Academy
+       
         
         title: AK MANAGEMENT
         sub_title: ADMINISTRATOR and TECHNICAL SUPPORT
