--- a/_config.yml
+++ b/_config.yml
@@ -93,12 +93,22 @@ content:
         quote: > 
            Head of sport Academy
         
+       
+        description: | # this will include new lines to allow paragraphs
+          Description of role
+- title: Experience
+    layout: list
+    content:
+      - layout: right
         title: AK MANAGEMENT
         sub_title: ADMINISTRATOR and TECHNICAL SUPPORT
         caption: Date Range (March 2014 - August 2017)
-          
+        link: http://www.vitosha-academy.com/bg
+        quote: > 
+           Head of sport Academy
+        
         description: | # this will include new lines to allow paragraphs
-          Description of role
+          Description of role          
   - title: Education
     layout: list
     content:
