--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ content:
     content:
       - layout: right
         title: VITOSHA 13
-        sub_title: Director
+        sub_title: DIRECTOR
         caption: Date Range (August 2017 - March 2020)
         link: http://www.vitosha-academy.com/bg
         quote: > 
