--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ content:
         quote: >
           Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
+        The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
   - title: Experience
     layout: list
     content:
