--- a/_config.yml
+++ b/_config.yml
@@ -60,10 +60,9 @@ about_content:  | # this will include new lines to allow paragraphs
         
   
     
-    You can see my GitHub profile:  
-     content:
-      - layout: left  
-        link: https://github.com/static1010
+    You can see my GitHub profile: https://github.com/static1010
+    
+  
     
 
 content:
