--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ content:
         caption: Date Range (March 2014 - August 2017)
         link: http://www.vitosha-academy.com/bg
         quote: > 
-           Head of sport Academy
+           Technical support
         
         description: | # this will include new lines to allow paragraphs
           Description of role          
