--- a/_config.yml
+++ b/_config.yml
@@ -115,9 +115,9 @@ content:
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
+        title: MTM College
+        sub_title: MARKETING AND MANAGMENT (Bachelor dregree)
+        caption: Date Range ( September 2009 - September 2014)
         quote: >
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
