--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ content:
         sub_title: MARKETING AND MANAGMENT (Bachelor dregree)
         caption: Date Range ( September 2009 - September 2014)
         quote: >
-          Short institution or course description (optional)
+          Short courses description:
         description: | # this will include new lines to allow paragraphs
           Description of qualification
   - title: A Little More About Me
