--- a/_config.yml
+++ b/_config.yml
@@ -121,9 +121,9 @@ content:
         quote: >
           Short courses description:
         description: | # this will include new lines to allow paragraphs
-          HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020)
-          CSS/JAVASCRIPT - SOFT ACADEMY / UDEMY (January 2021 - February 2021)
-          JAVASCRIPT - SOFTUNI / UDEMY (February 2021 - September 2021)
+          HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) |
+          CSS/JAVASCRIPT - SOFT ACADEMY / UDEMY (January 2021 - February 2021) |
+          JAVASCRIPT - SOFTUNI / UDEMY (February 2021 - September 2021) #
           REACT - SOFTUNI / UDEMY (September 2021 - November 2021)
           
   - title: A Little More About Me
