--- a/_config.yml
+++ b/_config.yml
@@ -121,9 +121,8 @@ content:
         quote: >
           Short courses description:
         description: | # this will include new lines to allow paragraphs
-   about_content: | # 
            HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT > (September 2020 - December 2020) 
-          
+           ZZZ/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT > (September 2020 - December 2020) 
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
