--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ content:
           Short courses description:
         skills: | # this will include new lines to allow paragraphs
            # HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
-           # ZZZ/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
+           # aaZ/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
           
       
   - title: A Little More About Me
