--- a/_config.yml
+++ b/_config.yml
@@ -121,8 +121,8 @@ content:
         quote: >
           Short courses description:
         skills: | # this will include new lines to allow paragraphs
-           # HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
-           # aaZ/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
+           - HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
+           - aaZ/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
           
       
   - title: A Little More About Me
