--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,12 @@ content:
           Short courses description:
         description: | # this will include new lines to allow paragraphss
            - HTML/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
-           - aaZ/CSS/JAVASCRIPT - SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
+           - CSS/JAVASCRIPT - SOFT ACADEMY / UDEMY (Januray 2021 - February 2021) 
+           - JAVASCRIPT - SOFTUNI / UDEMY (February 2021 - September 2021) 
+           - REACT - SOFTUNI / UDEMY (September 2021 - November 2021) 
+           
+          
+          
           
       
   - title: A Little More About Me
