--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ content:
         sub_title: MARKETING AND MANAGMENT (Bachelor dregree)
         caption: Date Range ( September 2009 - September 2014)
         quote: >
-          Short courses description:
+          Courses description:
         description: | # this will include new lines to allow paragraphss
            - HTML / CSS / JAVASCRIPT --- SOFT ACADEMY / PLURALSIGHT (September 2020 - December 2020) 
            - CSS / JAVASCRIPT / TELERIK --- SOFT ACADEMY / UDEMY (Januray 2021 - February 2021) 
