--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ content:
       I spend all my time studying in the field of programming and I dream of realizing myself in this field.
       I graduated in marketing and management. During my career I worked mainly as a technical assistant and head of a sports academy with two hundred children and twenty teachers.
       I have organized many charity campaigns to help children and their better future.
-      A year ago i discovered my new passion in programing and decided to take on this new challenge.
+      A year ago i discovered my new passion in programming and decided to take on this new challenge.
       My hobbies are football, snowboarding, cinema, fitness, cooking, good music.
 
 # Footer
