--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ content:
         description: | # this will include new lines to allow paragraphs
                The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
 
-  - title: Море Projects
+  - title: More Projects
     layout: list
     content:
       - layout: left
