--- a/_config.yml
+++ b/_config.yml
@@ -89,14 +89,10 @@ content:
       - layout: left
         title: Calendar for expenses
         link: https://github.com/static1010/Calendar-for-expenses.git
-        quote: > 
-           The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
-        
-       
         description: | # this will include new lines to allow paragraphs
-          Head of a sport Academy with twenty coaches and two hundred children in period of three years.
-      
-  - title: Experience
+            Тhe project provides information on costs over months and years. It is built on React  
+ 
+ - title: Experience
     layout: list
     content:
       - layout: right
