--- a/_config.yml
+++ b/_config.yml
@@ -66,34 +66,30 @@ about_content:  | # this will include new lines to allow paragraphs
     
 
 content:
-  - title:  Projects # Title for the section
+    title:  Projects # Title for the section
     layout:  list # Type of content section (list/text)
     content:
       - layout:  left
-        title: Food Order
+        title:  Food  Order
         link: https://static1010.github.io/Food-Order/
         link_text: 
         additional_links:
           - title:  Food Order
             icon: fab fa-github
             url:  https://static1010.github.io/Food-Order/
-        description:  | # this will include new lines to allow paragraphs
-            
-            The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
+        description:   |  # this will include new lines to allow paragraphs
+         The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
 
-  - title:  More Projects
+    title:  More Projects
     layout: list
     content:
         layout:  left
         title:  Calendar for expenses
         link:  https://github.com/static1010/Calendar-for-expenses.git
-       quote: >
-          Тhe project provides information on costs over months and years. It is built on React
-      
-      description: | # this will include new lines to allow paragraphs
+    description: | # this will include new lines to allow paragraphs
           Тhe project provides information on costs over months and years. It is built on React  
  
-  - title: Experience
+    title: Experience
     layout: list
     content:
       - layout: right
@@ -101,13 +97,12 @@ content:
         sub_title: DIRECTOR
         caption: Date Range (August 2017 - March 2020)
         link: http://www.vitosha-academy.com/bg
-        quote: > 
-           Head of sport Academy
-        
+     
        
         description: | # this will include new lines to allow paragraphs
-          Head of a sport Academy with twenty coaches and two hundred children in period of three years.
-  - title: More Experience
+          
+               Head of a sport Academy with twenty coaches and two hundred children in period of three years.
+    title: More Experience
     layout: list
     content:
       - layout: right
@@ -118,9 +113,12 @@ content:
         quote: > 
            Technical support
         
-        description: | # this will include new lines to allow paragraphs
-          Responsible for the entire administration, documentation and organization of the company AK Managment.          
-  - title: Education
+        description:  |  # this will include new lines to allow paragraphs
+          
+             Responsible for the entire administration, documentation and organization of the company AK Managment.   
+             
+             
+    title: Education
     layout: list
     content:
       - layout: top-right
@@ -139,7 +137,7 @@ content:
           
           
       
-  - title: A Little More About Me
+    title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
       I study programming for more than a year. I went through many courses to learn HTML, CSS, Database, JavaScript, React. 
