--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ about_content:  | # this will include new lines to allow paragraphs
     
 
 content:
-    title:  Projects # Title for the section
+   - title:  Projects # Title for the section
     layout:  list # Type of content section (list/text)
     content:
       - layout:  left
@@ -80,7 +80,7 @@ content:
         description:   |  # this will include new lines to allow paragraphs
          The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
 
-    title:  More Projects
+   - title:  More Projects
     layout: list
     content:
         layout:  left
@@ -89,7 +89,7 @@ content:
     description: | # this will include new lines to allow paragraphs
           Тhe project provides information on costs over months and years. It is built on React  
  
-    title: Experience
+   - title: Experience
     layout: list
     content:
       - layout: right
@@ -102,7 +102,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           
                Head of a sport Academy with twenty coaches and two hundred children in period of three years.
-    title: More Experience
+   - title: More Experience
     layout: list
     content:
       - layout: right
@@ -118,7 +118,7 @@ content:
              Responsible for the entire administration, documentation and organization of the company AK Managment.   
              
              
-    title: Education
+   - title: Education
     layout: list
     content:
       - layout: top-right
@@ -137,7 +137,7 @@ content:
           
           
       
-    title: A Little More About Me
+   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
       I study programming for more than a year. I went through many courses to learn HTML, CSS, Database, JavaScript, React. 
