--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ content:
    - title:  More Projects
     layout: list
      content:
-        layout: right
+        layout: left
         title: Calendar for expenses
         link:  https://github.com/static1010/Calendar-for-expenses.git
-       description: | # this will include new lines to allow paragraphs
-          Тhe project provides information on costs over months and years. It is built on React
+     description: | # this will include new lines to allow paragraphs
+          Тhe project provides information on costs over months and years. It is built on React  
  
    - title: Experience
     layout: list
@@ -98,8 +98,8 @@ content:
      
        
         description: | # this will include new lines to allow paragraphs
-          Head of a sport Academy with twenty coaches and two hundred children in period of three years.
           
+               Head of a sport Academy with twenty coaches and two hundred children in period of three years.
    - title: More Experience
     layout: list
      content:
