--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ content:
         link: https://static1010.github.io/Food-Order/
         link_text: 
         additional_links: 
-          - title:  Food Order
+            title:  Food Order
             icon: fab fa-github
             url:  https://static1010.github.io/Food-Order/
         description:   |  # this will include new lines to allow paragraphs
@@ -84,8 +84,8 @@ content:
         layout: left
         title: Calendar for expenses
         link:  https://github.com/static1010/Calendar-for-expenses.git
-        description: | # this will include new lines to allow paragraphs
-          Тhe project provides information on costs over months and years. It is built on React
+     description: | # this will include new lines to allow paragraphs
+          Тhe project provides information on costs over months and years. It is built on React  
  
    - title: Experience
     layout: list
