--- a/_config.yml
+++ b/_config.yml
@@ -65,46 +65,45 @@ about_content:  | # this will include new lines to allow paragraphs
     
 content:
    - title: Projects # Title for the section
-    layout: list # Type of content section (list/text)
+     layout: list # Type of content section (list/text)
      content:
-      - layout: left
-        title: Food Order
-        link: https://static1010.github.io/Food-Order/
-        link_text: 
-        additional_links: 
+       - layout: left
+         title: Food Order
+         link: https://static1010.github.io/Food-Order/
+         link_text: 
+         additional_links: 
             title:  Food Order
             icon: fab fa-github
             url:  https://static1010.github.io/Food-Order/
-        description:   |  # this will include new lines to allow paragraphs
-        
-           The project is built for the purchase of different types of food. It is built on React, CSS modules are used for styling.
+     description:   |  # this will include new lines to allow paragra  
+               The project is built for the purchase of different types   of food. It is built on React, CSS modules are used   for styling.
          
    - title:  More Projects
-    layout: list
+     layout: list
      content:
-        layout: left
-        title: Calendar for expenses
-        link:  https://github.com/static1010/Calendar-for-expenses.git
+     - layout: left
+       title: Calendar for expenses
+       link:  https://github.com/static1010/Calendar-for-expenses.git
      description: | # this will include new lines to allow paragraphs
      
           Тhe project provides information on costs over months and years. It is built on React  
  
    - title: Experience
-    layout: list
+     layout: list
      content:
-      - layout: right
-        title: VITOSHA 13
-        sub_title: DIRECTOR
-        caption: Date Range (August 2017 - March 2020)
-        link: http://www.vitosha-academy.com/bg
+     - layout: right
+       title: VITOSHA 13
+       sub_title: DIRECTOR
+       caption: Date Range (August 2017 - March 2020)
+       link: http://www.vitosha-academy.com/bg
      
        
-        description: | # this will include new lines to allow paragraphs
+       description: | # this will include new lines to allow paragraphs
           
                Head of a sport Academy with twenty coaches and two hundred children in period of three years.
                
    - title: More Experience
-    layout: list
+     layout: list
      content:
       - layout: right
         title: AK MANAGEMENT
@@ -120,7 +119,7 @@ content:
              
              
    - title: Education
-    layout: list
+     layout: list
      content:
       - layout: top-right
         title: MTM College
@@ -139,7 +138,7 @@ content:
           
       
    - title: A Little More About Me
-    layout: text
+     layout: text
      content: | # this will include new lines to allow paragraphs
       I study programming for more than a year. I went through many courses to learn HTML, CSS, Database, JavaScript, React. 
       I spend all my time studying in the field of programming and I dream of realizing myself in this field.
