--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ content:
      - layout: left
        title: Calendar for expenses
        link:  https://github.com/static1010/Calendar-for-expenses.git
-     description to: | # this will include new lines to allow paragraphs
+     descriptions: | # this will include new lines to allow paragraphs
      
           Тhe project provides information on costs over months and years. It is built on React  
  
