--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ about_content:  | # this will include new lines to allow paragraphs
    Responding to challenges by designing and developing solutions and building web applications aligned to customer's services. Translating
    solutions into code.
      I work on my own project with follow technologies:  
-       - RACT 
+       - REACT 
        - JavaScript
        - CSS
        - HTML5
