--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ content:
      content:
      - layout: left
        title: Calendar for expenses
-       link:  https://github.com/static1010/Calendar-for-expenses.git
+       link:  https://static1010.github.io/Calendar-for-expenses/
        description: | # this will include new lines to allow paragraphs
          Тhe project provides information on costs over months and years. It is built on React  
  
