--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ title: Frontend Developer
 email: bojidargo@gmail.com
 # email_title: Email (Email title override)
 phone: +359 878 208 373
+city: Sofia, Lozenets
 
 
 
