--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Bozhidar Gorchev
 title: Frontend Developer
 email: bojidargo@gmail.com
 # email_title: Email (Email title override)
-city: Sofia, Lozenets
+city: Sofia Lozenets
 phone: +359 878 208 373
 
 
