--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,9 @@ additional_links:
 about_profile_image: images/bg.jpg
 about_content:  | # this will include new lines to allow paragraphs 
    Solution-driven professional excelling in highly collaborative work environment, finding solutions
-   to challenges and focused on customer satisfaction. My interest and knowledge are in a JavaScript, Salesforce B2C Commerce Developer and React.
+   to challenges and focused on customer satisfaction. My interest and knowledge are in a JavaScript and React.
    Responding to challenges by designing and developing solutions and building web applications aligned to customer's services. Translating
-   solutions into code. Below I have added two projects from my developer training. The projects I have worked on in a work environment are puma for Africa with SFCC backend and headless part with React. 
-   I also worked on goodworky.com with laravel and tailwind.
-        
+   solutions into code. 
   
     
     You can see my GitHub profile: https://github.com/static1010
